--- a/Data-Analysis-Project_06_2021.ipynb
+++ b/Data-Analysis-Project_06_2021.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -94,35 +94,52 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "            ОАО Юнибанк\n",
-      "Созыв общего собрания акционеров\n",
+      "            СООБЩЕНИЕ О СУЩЕСТВЕННОМ ФАКТЕ\n",
+      "«О созыве и проведении общего собрания участников (акционеров) эмитента, а также о решениях, принятых общим собранием участников (акционеров) эмитента»\n",
       "1. Общие сведения\n",
-      "1.1. Полное фирменное наименование эмитента (для некоммерческой организации – наименование) Открытое акционерное общество «Юнибанк»\n",
-      "1.2. Сокращенное фирменное наименование эмитента ОАО «Юнибанк»\n",
-      "1.3. Место нахождения эмитента Республика Армения, г. Ереван, 0025, улица Чаренца 12, No 53, 1-5\n",
-      "1.4. Адрес страницы в сети Интернет, используемой эмитентом для раскрытия информации https://www.e-disclosure.ru/portal/company.aspx?id=38120 \n",
-      "2. Содержание сообщения\n",
-      "2.1 Вид общего собрания участников эмитента - Внеочередное общее собрание акционеров\n",
-      "2.2. Форма проведения общего собрания участников эмитента - В порядке принятия решений в форме заочного голосования (опроса)\n",
-      "2.3. Дата, место, время проведения общего собрания участников эмитента, почтовый адрес- 13.11.2020г., РА, 0025, г. Ереван, ул. Чаренца 12, номер 53, 1-5.\n",
-      "2.4 Кворум общего собрания участников (акционеров) эмитента - 162.352.900 штук обыкновенных акций,32.010.000 штук привилегированных акций (по 1-ому вопросу повестки дня) \n",
-      "2.5. Повестка дня общего собрания участников (акционеров) эмитента – 1. Утверждение изменений в Устав ОАО “Юнибанк”. 2. Увеличение размера уставного капитала ОАО “Юнибанк” в результате выпуска дополнительных привилегированных акций.\n",
-      "2.6. Результаты голосования по вопросам повестки дня общего собрания участников (акционеров) эмитента, по которым имелся кворум -  Суммарное количество голосов размещенных голосующих обыкновенных акций Банка составило 172.886.525 штук, из которых в голосовании приняли участие 162.352.900 акций, имеющих право голоса, или в процентном соотношении 93.91%, и 32.010.000 штук привилегированных акций, имеющих право голоса только по 1-ому вопросу повестки дня, или в процентном соотношении 100%. \n",
-      " 2.7 Формулировки решений, принятых общего собрания участников (акционеров) эмитента (акционеров) по указанным вопросам:\n",
-      "1. Утвердить следующие изменения в Уставе ОАО “Юнибанк” в связи с внесением изменений в решении Годового общего собрания акционеров ОАО “Юнибанк” от 29.06.2020г. по вопросу 7 повестки:\n",
-      " переизложить пункт 4.1, удалить пункт 4.7 главы 4, переизложить пункт 5.4 главы 5, пункт 6.7 главы 6, первое предложение и подпункт а) пункта 7.10 главы 7, добавить пункт 8.7 в главу 8, переизложить пункт 10.25, первое предложение пункта 10.14 главы 10, подпункт (и) пункта 10.1.1 главы 10.1, переизложить последнее предложение пункта 11.13 и пункт 11.18 главы 11 Устава.\n",
-      "2. После регистрации изменений в Уставе ОАО “Юнибанк” со стороны Центрального банка РА выпустить дополнительные конвертируемые привилегированные акции класса Б с фиксированным годовым дивидендом в размере 12% в количестве 4,778,261 (четыре миллиона семьсот семьдесят восемь тысяч двести шестьдесят одна) штука, номинальной стоимостью 230 (двести тридцать) драм РА каждая, с произведением размещения путем открытой подписки.\n",
-      "2.7. Дата составления и номер протокола общего собрания участников (акционеров) эмитента - 13.11.2020г, номер протокола – не применим, \n",
-      "2.8. Идентификационные признаки акций, владельцы которых имеют право на участие в общем собрании акционеров эмитента - обыкновенные акции (по вопросу 1 и 2), владельцы привилегированных акций (по вопросу 1)\n",
-      "2.9 Дата опубликования текста соответствующего документа на странице в сети Интернет - 13.11.2020\n",
-      "2.10 Адрес страницы в сети Интернет, на которой опубликован текст соответствующего документа.\n",
-      "https://www.e-disclosure.ru/portal/company.aspx?id=38120\n",
+      "1.1. Полное фирменное наименование эмитента  Публичное акционерное общество «Горно-металлургическая компания «Норильский никель»\n",
+      "1.2. Сокращенное фирменное наименование эмитента ПАО «ГМК «Норильский никель»\n",
+      "1.3. Место нахождения эмитента Российская Федерация, Красноярский край, г. Дудинка\n",
+      "1.4. ОГРН эмитента 1028400000298\n",
+      "1.5. ИНН эмитента 8401005730\n",
+      "1.6. Уникальный код эмитента, присвоенный регистрирующим органом 40155-F\n",
+      "1.7. Адрес страницы в сети Интернет, используемой эмитентом для раскрытия информации http://www.e-disclosure.ru/portal/company.aspx?id=564 \n",
+      "https://www.nornickel.ru/investors/disclosure/nornickel-disclosure/\n",
+      "1.8. Дата наступления события (существенного факта), о котором составлено сообщение (если применимо) 11.12.2020\n",
+      "2. Содержание сообщения о проведении общего собрания участников (акционеров) эмитента\n",
+      " и о принятых им решениях\n",
+      "Вид общего собрания участников (акционеров) эмитента (годовое (очередное), внеочередное): внеочередное.\n",
+      "Форма проведения общего собрания участников (акционеров) эмитента (собрание (совместное присутствие) или заочное голосование): заочное голосование.\n",
+      "Дата проведения общего собрания участников (акционеров) эмитента: 10 декабря 2020 года;\n",
+      "Дата окончания приема бюллетеней для голосования: 10 декабря 2020 года;\n",
+      "Почтовый адрес, по которому направлялись заполненные бюллетени для голосования: 107076, г. Москва, ул. Стромынка, д. 18, корпус 5Б, АО «НРК – P.O.С.Т.».\n",
+      "Адрес сайта в информационно-телекоммуникационной сети «Интернет», на котором заполнялись электронные формы бюллетеней: https://lk.rrost.ru/Nornik\n",
+      "Кворум общего собрания участников (акционеров) эмитента: \n",
+      "Число голосов, которыми обладали лица, принявшие участие в Общем собрании, составило:\n",
+      "по вопросу повестки дня 122 170 920 (77,20342 %);\n",
+      "Повестка дня общего собрания участников (акционеров) эмитента:\n",
+      "О выплате (объявлении) дивидендов по акциям ПАО «ГМК «Норильский никель» по результатам девяти месяцев 2020 года.\n",
+      "Результаты голосования по вопросам повестки дня общего собрания участников (акционеров) эмитента, по которым имелся кворум, и формулировки решений, принятых общим собранием участников (акционеров) эмитента по указанным вопросам:\n",
+      "По вопросу повестки дня \n",
+      "1. Выплатить дивиденды по обыкновенным акциям ПАО «ГМК «Норильский никель» по результатам девяти месяцев 2020 года в денежной форме в размере 623,35 рубля на одну обыкновенную акцию.\n",
+      "2. Установить в качестве даты, на которую определяются лица, имеющие право на получение дивидендов, 24 декабря 2020 года.\n",
+      "«ЗА» - 122 161 364 (99,99218%)\n",
+      "«ПРОТИВ» - 1 287 (0,00105 %)\n",
+      "«ВОЗДЕРЖАЛСЯ» - 5 936 (0,00486 %)\n",
+      "Дата составления и номер протокола общего собрания участников (акционеров) эмитента: 11 декабря 2020 года, Протокол №2.\n",
+      "Идентификационные признаки акций, владельцы которых имеют право на участие в общем собрании акционеров эмитента:\n",
+      "вид, категория (тип), серия ценных бумаг: акции обыкновенные именные бездокументарные;\n",
+      "государственный регистрационный номер выпуска ценных бумаг и дата его государственной регистрации: государственный регистрационный номер выпуска 1-01-40155-F зарегистрирован 12.12.2006;\n",
+      "международный код (номер) идентификации ценных бумаг (ISIN): RU0007288411.\n",
+      "Директор Департамента корпоративных отношений\n",
+      "(№ ГМК-115/171-нт от 16.12.2019)                                                        Н.Ю. Юрченко\n",
+      "11 декабря 2020 года\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(texts_df.iloc[311]['text'])"
+    "print(texts_df.iloc[170]['text'])"
    ]
   },
   {
@@ -1836,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2095,7 @@
        "[450 rows x 9 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2090,108 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Полное фирменное наименование эмитента</th>\n",
-       "      <th>Сокращенное наименование эмитента</th>\n",
-       "      <th>Адрес эмитента</th>\n",
-       "      <th>ИНН эмитента</th>\n",
-       "      <th>ОГРН эмитента</th>\n",
-       "      <th>Дата собрания</th>\n",
-       "      <th>Форма собрания</th>\n",
-       "      <th>Утвержденный состав совета директоров</th>\n",
-       "      <th>Вопрос о выплате дивидендов</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>Общество с ограниченной ответственностью \"Торг...</td>\n",
-       "      <td>ООО ТП \"Кировский\"</td>\n",
-       "      <td>620072, Свердловская область, город Екатеринбу...</td>\n",
-       "      <td>6664014812</td>\n",
-       "      <td>1026604966970</td>\n",
-       "      <td>16.12.2020</td>\n",
-       "      <td>совместное присутствие</td>\n",
-       "      <td>О.И. Кудрина</td>\n",
-       "      <td>вопрос не поднимался</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Полное фирменное наименование эмитента  \\\n",
-       "153  Общество с ограниченной ответственностью \"Торг...   \n",
-       "\n",
-       "    Сокращенное наименование эмитента  \\\n",
-       "153                ООО ТП \"Кировский\"   \n",
-       "\n",
-       "                                        Адрес эмитента ИНН эмитента  \\\n",
-       "153  620072, Свердловская область, город Екатеринбу...   6664014812   \n",
-       "\n",
-       "     ОГРН эмитента Дата собрания          Форма собрания  \\\n",
-       "153  1026604966970    16.12.2020  совместное присутствие   \n",
-       "\n",
-       "    Утвержденный состав совета директоров Вопрос о выплате дивидендов  \n",
-       "153                          О.И. Кудрина        вопрос не поднимался  "
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_df.loc[[153]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([301, 311, 311, 311, 345, 346, 361], dtype=int64),\n",
-       " array([7, 3, 4, 7, 7, 7, 7], dtype=int64))"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(pd.isnull(final_df))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
